corrigindo icone do linkedin

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <img class="menu__imagem" src="./img/icone-github.png" alt=""></a>
                     <a class="menu__link" href="https://www.linkedin.com/in/william-silva-817673106/">
                        
-                        <img class="menu__imagem" src="/img/icone-linkedin.png" alt="">
+                        <img class="menu__imagem" src="./img/icone-linkedin.png" alt="">
                     </a>
                     
                 </li>
